0.1.0 - 20200104 works for pi2-wp
0.1.1 - 20200104 diverge from bjjc, do not display catlist in categories.
0.3.0 - 2022-05-09 - yellow, boxed. pixel art and floating islands.
        2022-05-16 - added paladin
        2022-05-24 - moved other assets here from dropbox.
        2022-08-11 - slight improvement to styling of articles
0.4.0 - 2022-09-24 - NFT's category displays better cards
        2022-11-28 - added tag cloud
        2022-12-21 - added second footer, for ToS
        2022-12-29 - added page-notice.php
0.5.0 - 2023-01-03 - accommodating jan'23 issue, footer and header