@@ -3259,3 +3259,6 @@ ul.column li {
 .elementor .i20221116-box img {
   border-radius: 20px;
 }
+.20230114ButtonCart .icon img {
+  height: 42px;
+}
